--- a/cv02/cv02.ioc
+++ b/cv02/cv02.ioc
@@ -32,7 +32,6 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F030R8Tx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
-NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -73,11 +72,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LED2
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=S2
-PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
-PC0.Signal=GPXTI0
+PC0.Signal=GPIO_Input
 PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC1.GPIO_Label=S1
 PC1.GPIO_PuPd=GPIO_PULLUP
@@ -142,8 +140,6 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 board=NUCLEO-F030R8
